# stelar3D

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt-In-IMGUI-dir  CMakePresets-sample.json  Makefile  Readme.md  TODO  conanfile-notes.txt  conanfile.txt  vcpkg-win.json  vcpkg.json  vcpkg_json
.github/workflows/: cmake.yml
assets/planet/: planet.mtl
shaders/: 02-03-shaders_attributes_shader_class.frag  02-03-shaders_attributes_shader_class.vert  03-00-texture_wood_container.frag  03-00-texture_wood_container.vert  03-01-texture_wood_container_happy_face.frag  04-00-2textures_moved.frag  04-00-2textures_moved.vert  05-00-coordinates.frag  05-00-coordinates.vert  13-10-house_geometry.vert  14-00-blinn-phong.frag  17-00-point-shadow.frag  18-00-normal-mapping.frag  18-00-normal-mapping.vert  19-01-steep-parallax-mapping.frag  19-02-parallax-occlusion-mapping.frag  1T-apply_greyscaled.frag  1T-apply_greyscaledWeighted.frag  1T-apply_inversed.frag  1T-apply_kernel.frag  1Tcubemap-refraction.frag  20-00.lighting.frag  PN-DiffusiveMatLight_Viewpos.frag  PN-DiffusiveSpecularEmissionMatLight_Viewpos.frag  PN-DiffusiveSpecularMat-Directional_Viewpos.frag  PN-DiffusiveSpecularMat-FlashLightEdges_Viewpos.frag  PN-DiffusiveSpecularMat-FlashLight_Viewpos.frag  PN-DiffusiveSpecularMat-Lights_Viewpos.frag  PN-DiffusiveSpecularMat-Spot_Viewpos.frag  PN-DiffusiveSpecularMatLight_Viewpos.frag  PN-MVP-1T.vert  PN-MVP.vert  PN-MatLight_Viewpos.frag  PN-Mat_Obj_Light_Viewpos.frag  P_2D-MVP-1T.vert  lampColored.frag  obj_pos_color-ambient.frag  obj_pos_color-diffuse.frag  obj_pos_color-specular.frag  visualize-depthBuf.frag
src/: CMakeLists.txt  assets_path.h.in  attributes_binding_object.cpp  attributes_binding_object.h  datapoints.h  depth_cubemap.cpp  depth_cubemap.h  depth_map_artifacts.cpp  depth_map_artifacts.h  depth_map_fixed.cpp  depth_map_fixed.h  element_array.cpp  element_array.h  find_file_path.cpp  find_file_path.h  fly_cam.h  frame_buffer.cpp  frame_buffer.h  get_all_GLextensions.cpp  handle_events.cpp  handle_events.h  mesh_item.cpp  mesh_item.h  model.cpp  model.h  my-imgui-demo.cpp  ogl_context.cpp  ogl_context.h  ogl_debug.cpp  ogl_debug.h  render_buffer.cpp  render_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  win_cam_pos_fps.cpp  win_cam_pos_fps.h
src/00-getting_started/: 00-00-setup_ogl4_glad.cpp  02-00-shaders.cpp  03-00-texture_wood_container.cpp  03-01-texture_wood_container_happy_face-2textures.cpp  05-01-coordinates_3dCube.cpp  05-02-coordinates_10-3dCubes.cpp  06-00-camera-autorotating.cpp  06-01-camera-walk-around.cpp  06-02-camera-walk-cam_class.cpp  CMakeLists.txt
src/01-lighting/: 07-00-light-scene.cpp  08-00-ambient-light.cpp  08-01-diffuse-light.cpp  09-01-material-light.cpp  09-02-material-light-10boxes-LightColored.cpp  09-02-material-light-10boxes.cpp  09-03-diffuse-map.cpp  10-00-direct_light.cpp  10-03-flash_light_edges.cpp  11-00-multiple_lights.cpp  CMakeLists.txt
src/02-model-loading/: 12-00-backpack-model.cpp  CMakeLists.txt
src/03-advanced/: CMakeLists.txt
src/learnOpenGL/: CMakeLists.txt
src/learnOpenGL/00-getting_started/: 00-00-setup_ogl4_glad.cpp  01-00-triangle.cpp  01-01-triangle-ebo.cpp  01-02-triangles_two.cpp  02-00-shaders.cpp  02-01-shaders_uniform.cpp  02-02-shaders_attributes.cpp  02-03-shaders_attributes_shader_class.cpp  03-00-texture_wood_container.cpp  03-01-texture_wood_container_happy_face-2textures.cpp  04-00-transformations.cpp  04-01-transformations_exc.cpp  05-00-coordinates.cpp  05-01-coordinates_3dCube.cpp  05-02-coordinates_10-3dCubes.cpp  06-00-camera-autorotating.cpp  06-01-camera-walk-around.cpp  06-02-camera-walk-cam_class.cpp  CMakeLists.txt
src/learnOpenGL/01-lighting/: 07-00-light-scene.cpp  08-00-ambient-light.cpp  08-01-diffuse-light.cpp  08-02-specular-light.cpp  09-00-material.cpp  09-01-material-light.cpp  09-02-material-light-10boxes-LightColored.cpp  09-02-material-light-10boxes.cpp  09-03-diffuse-map.cpp  09-04-specular-map.cpp  09-05-specular-emission-map.cpp  10-00-direct_light.cpp  10-01-direct_spot_light.cpp  10-02-flash_light.cpp  10-03-flash_light_edges.cpp  11-00-multiple_lights.cpp  CMakeLists.txt
src/learnOpenGL/02-model-loading/: 12-00-backpack-model.cpp  CMakeLists.txt
src/learnOpenGL/03-advanced/: 13-00-depth.cpp  13-01-stencil.cpp  13-02-blending.cpp  13-03-blending-sorted.cpp  13-04-framebuffer.cpp  13-05-framebuffer-post_processing.cpp  13-06-framebuffer-post_processing_kernel.cpp  13-07-cubemap.cpp  13-08-cubemap-reflection_refraction.cpp  13-09-uniform_buffer_objects.cpp  13-10-geometry_shader.cpp  13-11-exploding_geometry.cpp  13-12-visualize_normals.cpp  13-13-instancing_glId.cpp  13-14-instancing_planet.cpp  13-15-instancing_planet_glId.cpp  13-16-msaa.cpp  CMakeLists.txt
src/learnOpenGL/04-advanced-lighting/: 14-00-blinn-phong.cpp  15-00-gamma.cpp  16-00-shadow-mapping-visualise-depth.cpp  16-01-shadow-mapping-base.cpp  16-02-shadow-mapping.cpp  17-00-point-shadows.cpp  18-00-normal-mapping.cpp  19-00-parallax-mapping.cpp  19-01-steep-parallax-mapping.cpp  19-02-parallax-occlusion-mapping.cpp  20-00-HDR.cpp  CMakeLists.txt
src/learnOpenGL/04-advances-lighting/: 14-00-blinn-phong.cpp  15-00-gamma.cpp  16-00-shadow-mapping-visualise-depth.cpp  16-01-shadow-mapping-base.cpp  16-02-shadow-mapping.cpp  CMakeLists.txt
